heap test task with segfault

--- a/sources/userspace/CMakeLists.txt
+++ b/sources/userspace/CMakeLists.txt
@@ -43,3 +43,4 @@ ADD_USERSPACE_EXECUTABLE(init_task init_task/main.cpp)
 #ADD_USERSPACE_EXECUTABLE(counter_task counter_task/main.cpp)
 #ADD_USERSPACE_EXECUTABLE(tilt_task tilt_task/main.cpp)
 ADD_USERSPACE_EXECUTABLE(heap_test_task heap_test_task/main.cpp)
+ADD_USERSPACE_EXECUTABLE(heap_test_task_error heap_test_task_error/main.cpp)
