glucose task -- linkable

--- a/sources/userspace/CMakeLists.txt
+++ b/sources/userspace/CMakeLists.txt
@@ -44,8 +44,10 @@ ADD_USERSPACE_EXECUTABLE(init_task init_task/main.cpp)
 #ADD_USERSPACE_EXECUTABLE(counter_task counter_task/main.cpp)
 #ADD_USERSPACE_EXECUTABLE(tilt_task tilt_task/main.cpp)
 #ADD_USERSPACE_EXECUTABLE(tilt_task tilt_task/main.cpp)
-ADD_USERSPACE_EXECUTABLE(vfp_task vfp_task/main.cpp)
-ADD_USERSPACE_EXECUTABLE(uart_test_task uart_test_task/main.cpp)
-ADD_USERSPACE_EXECUTABLE(blink_task blink_task/main.cpp)
-ADD_USERSPACE_EXECUTABLE(heap_test_task heap_test_task/main.cpp)
-ADD_USERSPACE_EXECUTABLE(heap_test_task_error heap_test_task_error/main.cpp)
+#ADD_USERSPACE_EXECUTABLE(vfp_task vfp_task/main.cpp)
+#ADD_USERSPACE_EXECUTABLE(uart_test_task uart_test_task/main.cpp)
+#ADD_USERSPACE_EXECUTABLE(blink_task blink_task/main.cpp)
+#ADD_USERSPACE_EXECUTABLE(heap_test_task heap_test_task/main.cpp)
+#ADD_USERSPACE_EXECUTABLE(heap_test_task_error heap_test_task_error/main.cpp)
+FILE(GLOB glukose_task "glucose_task/main.cpp")
+ADD_USERSPACE_EXECUTABLE(glucose_task ${glukose_task})
