--- a/sources/userspace/CMakeLists.txt
+++ b/sources/userspace/CMakeLists.txt
@@ -50,4 +50,5 @@ ADD_USERSPACE_EXECUTABLE(init_task init_task/main.cpp)
 #ADD_USERSPACE_EXECUTABLE(heap_test_task heap_test_task/main.cpp)
 #ADD_USERSPACE_EXECUTABLE(heap_test_task_error heap_test_task_error/main.cpp)
 FILE(GLOB glukose_task "glucose_task/main.cpp")
+#FILE(GLOB glukose_task "glucose_task/speed_test.cpp")
 ADD_USERSPACE_EXECUTABLE(glucose_task ${glukose_task})
